(rocq.extraction
 (prelude OCamlExtraction)
 (theories Base Stdlib)
 (extracted_files
  Fn.ml Fn.mli
  Unit.ml Unit.mli
  Result.ml Result.mli
  Sign.ml Sign.mli))

; Packages the OCaml sources extracted above (in this same directory) as a
; normal, installable OCaml library.
(library
 (name certified_base)
 (package certified_base)
 (libraries rocq-runtime.kernel)
 (flags (:standard -w -a)))
